k8s/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: student-mgmt
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
