k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-mgmt-ingress
  namespace: student-mgmt
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
